--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <div class="content"><h2><i class='bx bx-money-withdraw'></i>Bitos</h2>
             <div class="text-sci">
                 <h2>Welcome!<br><span>To My Website.</span></h2>
-                <p>Gingoog City, Inc, First Year College, Bachelor of Science in Information Technology<br>Simple Personal Website Project!!.</p>
+                <p>Gingoog City, Inc, 12TH Grade (Senior Highschool), Information, Communication and Technology<br>Simple Personal Website Project!!.</p>
                 <div class="social-icons">
-                    <a href="https://www.youtube.com/@Randy_Animations143"><i class='bx bxl-youtube'></i>
-                    <a href="https://www.facebook.com/mojang.gameplay"><i class='bx bxl-facebook-circle' ></i>
-                    <a href="https://www.instagram.com/bitoskimkim/profile"><i class='bx bxl-instagram-alt' ></i>
-                    <a href="https://x.com/gaming_kim35185"><i class='bx bxl-twitter' ></i>
+                    <a href="https://www.youtube.com/@DIRTS5000"><i class='bx bxl-youtube'></i>
+                    <a href="https://www.facebook.com/kirkpatrick.bitos"><i class='bx bxl-facebook-circle' ></i>
+                    <a href="https://www.instagram.com/kirkisdirt/"><i class='bx bxl-instagram-alt' ></i>
+                    <a href="https://www.tiktok.com/@a_kittara"><i class='bx bxl-tiktok' ></i>
                 </div>
             </div>
         </div>
