--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, iniyial-scale=1.0">
     <title>MY OFFICIAL WEBSITE | Bitos
 </title>
 <link rel="stylesheet" href="main.css">
@@ -17,7 +17,7 @@
         <nav class="navbar">
             <a href="about.html">ABOUT ME</a>
             <a href="contact.html">CONTACT ME</a>
-            <a href="blog.html">MY BLOG</a>
+            <a href="blog.html">BLOG</a>
             <a href="https://github.com/KirkBitos143">My Github Account</a>
         </nav>
 
@@ -25,18 +25,18 @@
             <input type="text"  placeholder="search..."> 
             <button type="submit"><i class='bx bx-search'></i></button> 
         </form>
-        <a href="Up.html" class="Login-Form">Login/Signup</a>    
+        <a href="#" class="Login-Form">Login/Signup</a>    
     </header>
     <div class="container">
         <div class="content"><h2><i class='bx bx-money-withdraw'></i>Bitos</h2>
             <div class="text-sci">
-                <h2>Welcome!<br><span>To My Website.</span></h2>
-                <p>Gingoog City, Inc, First Year College, Bachelor of Science in Information Technology<br>Simple Personal Website Project!!.</p>
+                <h2>Welcome!<br><span>To My Website.</span>Gingoog City</h2>
+                <p>Inc, 12TH Grade (Senior Highschool), Information, Communication and Technology<br>Simple Personal Website Project!!.</p>
                 <div class="social-icons">
-                    <a href="https://www.youtube.com/@Randy_Animations143"><i class='bx bxl-youtube'></i>
-                    <a href="https://www.facebook.com/mojang.gameplay"><i class='bx bxl-facebook-circle' ></i>
-                    <a href="https://www.instagram.com/bitoskimkim/profile"><i class='bx bxl-instagram-alt' ></i>
-                    <a href="https://x.com/gaming_kim35185"><i class='bx bxl-twitter' ></i>
+                    <a href="https://www.youtube.com/@DIRTS5000"><i class='bx bxl-youtube'></i>
+                    <a href="https://www.facebook.com/kirkpatrick.bitos"><i class='bx bxl-facebook-circle' ></i>
+                    <a href="https://www.instagram.com/kirkisdirt/"><i class='bx bxl-instagram-alt' ></i>
+                    <a href="https://www.tiktok.com/@a_kittara"><i class='bx bxl-tiktok' ></i>
                 </div>
             </div>
         </div>
